generics, code conventions, and one new method 'getRoles', needed to solve MMB-1375
git-svn-id: https://scm.mmbase.org/mmbase/trunk@22267 91430c5f-d668-0410-9e7d-dd663366dcfd