@@ -43,7 +43,7 @@ import org.mmbase.util.logging.Logging;
  * @todo Fix cache so it will be updated using multicast.
  * @author Daniel Ockeloen
  * @author Pierre van Rooden
- * @version $Id: RelDef.java,v 1.40 2006-07-05 15:16:34 pierre Exp $
+ * @version $Id: RelDef.java,v 1.41 2007-01-17 20:12:52 michiel Exp $
  */
 public class RelDef extends MMObjectBuilder {
 
@@ -63,14 +63,14 @@ public class RelDef extends MMObjectBuilder {
 
     // cache of relation definitions
     // sname or sname/dname -> rnumber
-    private Map relCache = new HashMap();
+    private final Map<String, Integer> relCache = new HashMap<String, Integer>();
 
     // cache of valid relationbuilders
     // otype of relations builder -> MMObjectBuilder
-    private  Map relBuilderCache = null;
+    private  Map<Integer, MMObjectBuilder> relBuilderCache = null;
 
     // rnumber -> MMObjectBuilder Name
-    private  Map rnumberCache = new HashMap();
+    private  Map<Integer, String> rnumberCache = new HashMap<Integer, String>();
 
     /**
      *  Contruct the builder
@@ -95,7 +95,7 @@ public class RelDef extends MMObjectBuilder {
      * it's sname/dname combination.
      */
     private void addToCache(MMObjectNode node) {
-        Integer rnumber = (Integer) node.getValue("number");
+        Integer rnumber = node.getNumber();
         relCache.put(node.getStringValue("sname"), rnumber);
         relCache.put(node.getStringValue("sname") + "/" + node.getStringValue("dname"), rnumber);
 
@@ -111,18 +111,18 @@ public class RelDef extends MMObjectBuilder {
         relCache.remove(node.getStringValue("sname"));
         relCache.remove(node.getStringValue("sname") + "/" + node.getStringValue("dname"));
 
-        rnumberCache.remove(new Integer(node.getNumber()));
+        rnumberCache.remove(Integer.valueOf(node.getNumber()));
     }
 
     /**
      * @since MMBase-1.7.1
      */
     private void removeFromCache(int rnumber) {
-        Integer r = new Integer(rnumber);
-        Iterator i = relCache.entrySet().iterator();
+        Integer r = Integer.valueOf(rnumber);
+        Iterator<Map.Entry<String, Integer>> i = relCache.entrySet().iterator();
         while (i.hasNext()) {
-            Map.Entry entry = (Map.Entry) i.next();
-            Object value = entry.getValue();
+            Map.Entry<String, Integer> entry = i.next();
+            Integer value = entry.getValue();
             if (r.equals(value)) {
                 i.remove();
             }
@@ -140,15 +140,14 @@ public class RelDef extends MMObjectBuilder {
     private boolean readCache() {
         rnumberCache.clear();
         relCache.clear();        // add insrel (default behavior)
-        relCache.put("insrel", new Integer(-1));
+        relCache.put("insrel", Integer.valueOf(-1));
         // add relation definiation names
         try {
-            for (Iterator i = getNodes(new NodeSearchQuery(this)).iterator(); i.hasNext();) {
-                MMObjectNode n = (MMObjectNode) i.next();
+            for (MMObjectNode n :getNodes(new NodeSearchQuery(this))) {
                 addToCache(n);
             }
         } catch (org.mmbase.storage.search.SearchQueryException sqe) {
-            log.error("Error while reading reldef cache" + sqe.getMessage());
+            log.error("Error while reading reldef cache" + sqe.getMessage(), sqe);
         }
         return true;
     }
@@ -177,7 +176,7 @@ public class RelDef extends MMObjectBuilder {
      */
 
     public String getBuilderName(Integer reldefNodeNumber) {
-        return (String) rnumberCache.get(reldefNodeNumber);
+        return  rnumberCache.get(reldefNodeNumber);
     }
 
 
@@ -213,7 +212,7 @@ public class RelDef extends MMObjectBuilder {
      */
     public String getBuilderName(MMObjectNode node) {
         if (node == null) return "NULL";
-        return (String) rnumberCache.get(new Integer(node.getNumber()));
+        return (String) rnumberCache.get(Integer.valueOf(node.getNumber()));
     }
 
 
@@ -396,6 +395,14 @@ public class RelDef extends MMObjectBuilder {
     }
 
     /**
+     * Returns all possible rnumbers ('roles').
+     * @since MMBase-1.9
+     */
+    public Set<Integer> getRoles() {
+        return Collections.unmodifiableSet(rnumberCache.keySet());
+    }
+
+    /**
      * Retrieve descriptors for a relation definition's fields,
      * specifically a descriptive text for the relation's direction (dir)
      * @param field Name of the field whose description should be returned.
@@ -436,22 +443,18 @@ public class RelDef extends MMObjectBuilder {
      */
 
     public boolean isRelationTable(String name) {
-        Object ob;
-        ob=relCache.get(name);
-        return ob!=null;
+        return relCache.containsKey(name);
     }
 
     // Retrieves the relationbuildercache (initializes a new cache if the old one is empty)
     private Map getRelBuilderCache() {
         // first make sure the buildercache is loaded
         if (relBuilderCache == null) {
-            relBuilderCache = new HashMap();
+            relBuilderCache = new HashMap<Integer, MMObjectBuilder>();
             // add all builders that descend from InsRel
-            Iterator buls = mmb.getBuilders().iterator();
-            while (buls.hasNext()) {
-                MMObjectBuilder fbul = (MMObjectBuilder) buls.next();
+            for (MMObjectBuilder fbul : mmb.getBuilders()) {
                 if (fbul instanceof InsRel) {
-                    relBuilderCache.put(new Integer(fbul.getNumber()), fbul);
+                    relBuilderCache.put(Integer.valueOf(fbul.getNumber()), fbul);
                 }
             }
         }
@@ -465,9 +468,7 @@ public class RelDef extends MMObjectBuilder {
      */
 
     public boolean isRelationBuilder(int number) {
-        Object ob;
-        ob = getRelBuilderCache().get(new Integer(number));
-        return ob != null;
+        return getRelBuilderCache().containsKey(Integer.valueOf(number));
     }
 
     /**
@@ -475,9 +476,11 @@ public class RelDef extends MMObjectBuilder {
      * @return an <code>Enumeration</code> containing the builders (as otype)
      */
 
-    public Enumeration getRelationBuilders() {
+    public Enumeration<MMObjectBuilder> getRelationBuilders() {
         return Collections.enumeration(getRelBuilderCache().values());
     }
+
+
 
     /**
      * Search the relation definition table for the identifying number of
@@ -521,7 +524,7 @@ public class RelDef extends MMObjectBuilder {
      * @return A <code>int</code> value indicating the relation's object number, or -1 if not found.
      */
     public int getNumberByName(String role, boolean searchBidirectional) {
-        Integer number = (Integer) relCache.get(role);
+        Integer number = relCache.get(role);
         if (number != null) {
             return number.intValue();
         }
@@ -531,9 +534,9 @@ public class RelDef extends MMObjectBuilder {
             query.setConstraint(constraint);
             query.setMaxNumber(1);
             try {
-                List reldefs = getNodes(query);
+                List<MMObjectNode> reldefs = getNodes(query);
                 if (reldefs.size() != 0) {
-                    MMObjectNode node = (MMObjectNode)reldefs.get(0);
+                    MMObjectNode node = reldefs.get(0);
                     return node.getNumber();
                 }
             } catch (SearchQueryException sqe) {
@@ -556,7 +559,7 @@ public class RelDef extends MMObjectBuilder {
      */
 
     public int getGuessedByName(String role) {
-        return getNumberByName(role,true);
+        return getNumberByName(role, true);
     }
 
     /**
@@ -569,10 +572,10 @@ public class RelDef extends MMObjectBuilder {
      *     indicated names, the first one found is returned.
      * @deprecated use {@link #getNumberByName} instead
      */
-    public int getRelNrByName(String sname, String dname) {
-        int res=getNumberByName(sname+"/"+dname);
-        if (res<-1) {
-            res=getNumberByName(dname+"/"+sname);
+    public int getRelsNrByName(String sname, String dname) {
+        int res = getNumberByName(sname + "/" + dname);
+        if (res < -1) {
+            res = getNumberByName(dname + "/" + sname);
         }
         return res;
     }
@@ -584,8 +587,11 @@ public class RelDef extends MMObjectBuilder {
      * cache.
      * @todo Old roles are cuerrently not cleared or removed - which means that they may remain
      * useable for some time after the actual role is deleted or renamed.
+     * @todo Use 1.8 event mechanism in stead.
+     *
      * This because old role information is no longer available when this call is made.
      * @since MMBase-1.7.1
+
      */
     public boolean nodeRemoteChanged(String machine, String number, String builder, String ctype) {
         if (builder.equals(getTableName())) {
